#146 Fleshing out initial ideas for snapshot of MBeans.